Cyberduck
https://cyberduck.io/

6.3.2
- [Feature] Option to save passwords (Cyberduck CLI, Linux)
- [Bugfix] Failure parsing permissions from MLSD reply (FTP)
- [Bugfix] Signed links incorrectly URL-encoded (Triton) (#10151)
- [Bugfix] Passwords not saved in keychain (SFTP) (#10159)

6.3.1
- [Feature] Support authenticating with HTTP proxy (Windows)
- [Feature] Read credentials from AWS configuration file in ~/.aws/credentials (S3)
- [Bugfix] Slow user interface performance (Mac) (#9970)
- [Bugfix] Prompt for credentials when using public key authentication with agent (SFTP) (#10148)
- [Bugfix] Failure opening files in vault on disk with long filename (Cryptomator, Local Disk)

6.3
- [Feature] Support for DRACOON cloud service (DRACOON)
- [Feature] Support for Google Team Drives (Google Drive) (#9928)
- [Feature] Support for Joyent Triton Object Storage (Triton)
- [Feature] Support for China (Beijing) region (S3)
- [Bugfix] Allow custom endpoint with default connection profile (S3)
- [Bugfix] Unnecessary password prompt for connection (Local Disk)
- [Bugfix] Login where authentication is required with both password and one-time passcode (SFTP)
- [Bugfix] File not found failure when downloading folder form vault (Cryptomator)
- [Bugfix] Not possible to copy files between browser windows (FTP)

6.2.11
- [Bugfix] Application crash restoring workspace (Windows)

6.2.10
- [Feature] Option to disable auto-detect of vaults (Cryptomator)
- [Bugfix] Login where authentication is required with both password and public key method (SFTP)

6.2.9
- [Bugfix] Disable selection of client certificate in bookmark window when not applicable
- [Bugfix] Rename and override exiting file (One Drive, Dropbox)
- [Bugfix] Disable use of hashed hostname when writing to ~/.ssh/known_hosts (SFTP)

6.2.8
- [Bugfix] Delete session when canceling upload (One Drive)

6.2.7
- [Bugfix] Rename and override exiting file (Google Drive)
- [Bugfix] Reduce number of requests for uploads (Google Drive)
