@@ -75,12 +75,16 @@
 </p>
 <ul>
     <li><span class="label label-success">Feature</span> Option to save passwords (Cyberduck CLI, Linux)</li>
-    <li><span class="label label-warning">Bugfix</span>Failure parsing permissions from MLSD reply (FTP)</li>
-    <li><span class="label label-warning">Bugfix</span>Signed links incorrectly URL-encoded (Triton) (<a
+    <li><span class="label label-warning">Bugfix</span> Failure parsing permissions from MLSD reply (FTP)</li>
+    <li><span class="label label-warning">Bugfix</span> Signed links incorrectly URL-encoded (Triton) (<a
         href="https://trac.cyberduck.io/ticket/10151">#10151</a>)
     </li>
-    <li>[Bugfix] Passwords not saved in keychain (SFTP) (<a
+    <li><span class="label label-warning">Bugfix</span> Passwords not saved in keychain (SFTP) (<a
         href="https://trac.cyberduck.io/ticket/10159">#10159</a>)
+    </li>
+    <li><span class="label label-warning">Bugfix</span> Set modification date on uploaded files (Local Disk)</li>
+    <li><span class="label label-warning">Bugfix</span> Allow to switch to authentication with private key in login
+        prompt (SFTP)
     </li>
 </ul>
 
